<resources>
    <string name="app_name">JobSearch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_data">DisplayDataActivity</string>
    <string name="title_activity_enter_data">EnterDataActivity</string>
    <string name="title_activity_view_data">ViewDataActivity</string>
    <string name="input_tran">Enter Data for Job Application</string>
    <string name="lbl_company_name">Company Name</string>
    <string name="lbl_company_name_hint">Company Name</string>
    <string name="lbl_initial_date">Enter Initial Date</string>
    <string name="lbl_followup_date">Enter followup date:</string>
    <string name="view_data">View Data</string>
    <string name="dateHint">mm/dd/yyyy</string>
    <string name="lbl_button_store">Store Data</string>
    <string name="empty">""</string>
</resources>
