<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carolsusieo.jobsearch.EnterDataActivity"
    tools:showIn="@layout/activity_enter_data">

    <TextView
        android:id="@+id/enterData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_tran" />

    <LinearLayout android:id="@+id/company_block"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterData"
        android:orientation="horizontal">

        <TextView android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_company_name"
            />

        <EditText android:id="@+id/editTextCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_company_name_hint"
            android:inputType="text"
            />

    </LinearLayout>
    <LinearLayout android:id="@+id/initial_date_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_block"
        android:orientation="horizontal">

    <TextView android:id="@+id/initalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_initial_date"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDateInitial"
        android:hint="@string/dateHint"
        android:hyphenationFrequency="normal" />
    </LinearLayout>

    <LinearLayout android:id="@+id/followup_date_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initial_date_block"
        android:orientation="horizontal">

    <TextView android:id="@+id/followupDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_followup_date"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDateFollowup"
        android:hint="@string/dateHint"
        android:hyphenationFrequency="normal" />
</LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Intermediate Agency"
        android:id="@+id/checkBoxIntermediate"
        android:enabled="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_button_store"
        android:id="@+id/buttonStoreData"
        android:layout_below="@+id/checkBoxIntermediate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hyphenationFrequency="normal" />


</RelativeLayout>

